Start building against Spring LDAP 2.3.4 snapshots
See gh-26394